# rust-web-server-egui

./: Cargo.toml  build_web.sh
docs/: example_app.js  example_app_bg.js  example_app_bg.wasm  index.html  movies.1.json  movies.2.json
example_app/: Cargo.toml
example_app/src/: lib.rs  main.rs
example_lib/: Cargo.toml
example_lib/src/: app.rs
