[workspace]
resolver = "2"
members = ["example_app", "example_lib"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = 2

[patch.crates-io]
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
# epaint = { git = "https://github.com/emilk/egui", branch = "master" }
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# epi = { git = "https://github.com/emilk/egui", branch = "master" }
# emath = { git = "https://github.com/emilk/egui", branch = "master" }
# egui-winit = { git = "https://github.com/emilk/egui", branch = "master" }
# # egui_glium = { git = "https://github.com/emilk/egui", branch = "master" }
# # egui_glow = { git = "https://github.com/emilk/egui", branch = "master" }
# egui_web = { git = "https://github.com/emilk/egui", branch = "master" }
