[package]
name = "example_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
eframe = { version = "0.16.0" }

example_lib = { path = "../example_lib" }

tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
